# mediaserver

./: .gitignore  BUILD.gn  CMakeLists_org.txt  Makefile  README.md  Signaler.cpp  Signaler.h  SignalerAPI.cpp  SignalerAPI.h  SocketIO.cpp  SocketIO.h  compile.sh  main.cpp
doc/: Adaption_of_fps.pptx
doc/Gstreamer/: gstreamer.txt
learning/: epoll.c
src/base/ping/: Makefile  ping.cpp  ping.h  pingtest.cpp
src/base/src/: Timer.cpp  application.cpp  base64.cpp  buffer.cpp  collection.cpp  datetime.cpp  filesystem.cpp  idler.cpp  logger.cpp  packetstream.cpp  platform.cpp  process.cpp  random.cpp  sha1.cpp  signalsHandler.cpp  test.cpp  thread.cpp  time.cpp  util.cpp
src/base/tests/: Makefile  basetests.cpp  basetests.h
src/base/token/: Digest.cpp  Digest.h  Encoders.cpp  Encoders.h  GenToken.cpp  GenToken.h  H1_SecurityToken.cpp  H1_SecurityToken.h  SecurityToken.cpp  SecurityToken.h
src/base/token_test/: Makefile  README.md  Test.cpp
src/broadcast/: README.md
src/broadcast/certificate/: request-with-request.js
src/broadcast/ffmpeg/: ac3.h  allcodecs.cpp  attributes.h  avassert.h  avcodec.h  avfft.cpp  avfft.h  avformat.h  avio.h  avio_internal.h  buffer.cpp  codec_desc.cpp  config.h  crc.h  dict.cpp  eval.cpp  fdctdsp.cpp  fdctdsp.h  fft.h  fifo.cpp  frame.cpp  frame.h  frame_thread_encoder.cpp  hwcontext.cpp  imgutils.cpp  internal_avformat.h  internal_util.h  intmath.cpp  intmath.h  log.h  mathops.h  mem.h  mpeg12data.h  mpeg4_unpack_bframes_bsf.cpp  mpegaudiodata.h  mpegpicture.cpp  mpegvideo.h  mux.cpp  network.h  options_table.h  (+9 more)
src/broadcast/include/: Settings.h  VideoEncoder.h  fmp4.h  frame.h  framefilter.h  live.h  livedep.h  livethread.h  muxer.h  muxframe.h
src/broadcast/main/: Makefile  Streamer.cpp  config.js  config.js_local  restapi.sh  restapi1.sh  restapi2.sh  webrtc.service
src/broadcast/src/: G711.cpp  G711Encoder.cpp  H264Framer.cpp  Settings.cpp  VideoEncoder.cpp  audiopacketmodule.cpp  ffparese.cpp  fmp4.cpp  frame.cpp  framefilter.cpp  live.cpp  livethread.cpp  multiplexmediacapturer.cpp  muxer.cpp  muxframe.cpp  peer.cpp  peerfactorycontext.cpp  peermanager.cpp  rawVideoFrame.cpp  signaler.cpp  tools.cpp  videopacketsource.cpp
src/broadcast/tests/: Makefile  Streamer.cpp
src/crypto/src/: crypto.cpp  hash.cpp  x509certificate.cpp
src/crypto/tests/: cryptotests.cpp
src/crypto_old/src/: cipher.cpp  hmac.cpp  rsa.cpp
src/crypto_old/tests/: Makefile  cryptotests.cpp
src/ffmpeg/: README.md
src/ffmpeg/audioTest/: audioencoder.cpp
src/ffmpeg/ffmpegPlayer/: Makefile  ffmpegPlayer.c
src/ffmpeg/ffmpeg_cpp/: aac_ac3_parser.cpp  ac3_parser.cpp  aes_ctr.h  allcodecs.cpp  allformats.cpp  avbuffer.h  avcodec.h  avdevthread.h  avio.cpp  avstring.h  avtime.cpp  avutil.h  bitstream.cpp  bitstream_filters.cpp  blockdsp.h  bprint.h  bswap.h  buffer_internal.h  bytestream.h  color_utils.h  config.h  constant.h  cpu.cpp  cuvid.cpp  dynarray.h  error_resilience.h  fft.h  frame.cpp  get_bits.h  hwcontext.cpp  hwcontext.h  hwcontext_internal.h  id3v2.cpp  id3v2.h  internal_util.h  intmath.h  intreadwrite.h  libfdk-aacdec.cpp  mem.cpp  mem_internal.h  (+27 more)
src/ffmpeg/ffplay/: Makefile  cmdutils.c  ffmpegPlayer.c
src/ffmpeg/fmp4Test/: Makefile  fragmentedMp4.c  fragmentedMp4.cpp
src/ffmpeg/h24Decoder/: H264_Decoder.cpp  H264_Decoder.h  Makefile  YUV420P_Player.cpp  YUV420P_Player.h  main.cpp
src/ffmpeg/h264Encoder/: H264_Encoder.cpp  H264_Encoder.h  Makefile  fftests.cpp
src/ffmpeg/h264Test/: Makefile
src/ffmpeg/motiondetection/: Makefile  README.md  main.cpp
src/ffmpeg/mp4/: Makefile  demuxing_decoding.cpp
src/ffmpeg/muxerTest/: Makefile  muxer.cpp
src/ffmpeg/src/: audiobuffer.cpp  audiocontext.cpp  audiodecoder.cpp  audioresampler.cpp  codec.cpp  ffmpeg.cpp  mediacapture.cpp  packet.cpp  videocontext.cpp  videodecoder.cpp
src/ffmpeg/tests/: Makefile  fftests.cpp
src/fmp4/: README.md
src/fmp4/ffmpeg/: ac3_parser.c  aes.h  allcodecs.c  audio_frame_queue.c  avc.c  avfft.c  avformat.h  avio.c  aviobuf.c  avutil.h  bitstream.c  bitstream_filters.c  buffer.c  buffer_internal.h  color_utils.c  config.h  cpu.c  cuvid.c  dict.c  error_resilience.d  faandct.c  file_open.c  format.c  frame_thread_encoder.c  h264_mp4toannexb_bsf.c  hwcontext.c  id3v1.c  imgutils_internal.h  intmath.c  isom.c  isom.h  libfdk-aacenc.c  mathematics.c  mem.c  metadata.c  metadata.h  motion_est.d  mov_chan.c  mov_chan.h  movenc.c  (+25 more)
src/fmp4/include/: WebSocketServer.h  avstring.h  bprint.h  codec.h  common.h  config.h  dict.h  ffparse.h  fmp4.h  frame.h  framefilter.h  intmath.h  intreadwrite.h  mem.h  micro.h  muxer.h  tools.h
src/fmp4/main/: Makefile  app.js  fMp4tests.cpp  index.html  main.js
src/http/: README.md
src/libavutil/: macros.h
src/libuv/: CMakeLists.txt  README.md
src/libuv/include/: uv.h
src/libuv/src/: convert.sh  dump.cpp  dump.h  fs-poll.cpp  inet.cpp  threadpool.cpp  uv-common.cpp
src/libuv/src/unix/: android-ifaddrs.cpp  bsd-ifaddrs.cpp  core.cpp  darwin-proctitle.cpp  darwin.cpp  fs.cpp  fsevents.cpp  getaddrinfo.cpp  internal.h  kqueue.cpp  linux-core.cpp  linux-inotify.cpp  pipe.cpp  process.cpp  proctitle.cpp  pthread-fixes.cpp  random-sysctl.cpp  stream.cpp  tcp.cpp  thread.cpp  udp.cpp
src/libuv/src/win/: core.cpp  fs-event.cpp  fs-fd-hash-inl.h  fs.cpp  pipe.cpp  process.cpp  tcp.cpp  thread.cpp  util.cpp  winsock.cpp
src/libuv/test/: Makefile  Makefile_old  benchmark-async-pummel.cpp  benchmark-async.cpp  benchmark-million-async.cpp  benchmark-million-timers.cpp  benchmark-multi-accept.cpp  benchmark-ping-pongs.cpp  benchmark-pump.cpp  benchmark-spawn.cpp  benchmark-tcp-write-batch.cpp  benchmark-udp-pummel.cpp  task.h  test-barrier.cpp  test-callback-stack.cpp  test-condvar.cpp  test-delayed-accept.cpp  test-list.h  test-signal.cpp  test-strscpy.cpp
src/rtsp/: README.md
src/sfu/: Makefile  README.md  README1.md  README2.md  README3.md  README4.md  README5.md  README6.md  README7.md  Transport-cc.md  ngnix.md  sfuserver.gyp
src/webRtcClient/: README.md
src/webrtc/: README.md
src/zlib/: zconf.h
(+1043 files in other folders)
